http://bugzilla.liquidsys.com/show_bug.cgi?id=4395 BUG 4395 add style expansion for ImgAppBanner

--- a/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
+++ b/ZimbraWebClient/WebRoot/js/zimbraAdmin/config/style/zmadmin.css
@@ -569,3 +569,7 @@ P, TD, DIV, SPAN, SELECT, INPUT, TEXTAREA, BUTTON {
 	height: 20px;
 	font-size: 20px; /* WEIRD IE QUIRK */
 }
+
+.ImgAppBanner {
+	cursor:hand;
+}
